# airiskkg

./: .gitignore  README.md
configs/: settings.example.yaml
data/: README.md
notebooks/: README.md  risk_sources_preprocess.ipynb  risk_sources_preprocess_refactor.ipynb
ontology/core/: beam_core.ttl  beam_core_risk.ttl  imports.ttl  risk_pattern.ttl
ontology/example/: beam_core_instance_uc6.ttl
ontology/patterns/: motif.ttl
ontology/patterns/implementation/: construct_IR_risk.construct.rq  information_retrieval.construct.rq
ontology/taxonomy/: ibm_risk_atlas.ttl  mit_ai_risk_repo.ttl  mit_air_risk_control.ttl  nexus_taxonomy_core.ttl  owasp_llm.ttl  taxonomy_mapping.ttl
python/: README.md  pyproject.toml
python/src/airiskkg/: cli.py  paths.py
python/tests/: test_imports.py
scripts/: project_info.py
src/airiskkg/: __init__.py  paths.py
